openshift/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cgroups-v2-checker
  labels:
    app.kubernetes.io/name: cgroups-v2-checker
